--- a/gwtproject/pom.xml
+++ b/gwtproject/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.4-1201-jdbc41</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.parsers</groupId>
+			<artifactId>jaxp-api</artifactId>
+			<version>1.4.5</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
