--- a/gwtproject/pom.xml
+++ b/gwtproject/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.numisoft.gwt</groupId>
 	<artifactId>gwtproject</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>GWT Maven Archetype</name>
 
 	<properties>
